Fixed an annoying bug.  Removed some text

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -34,8 +34,8 @@
       <div class="w3-section">
         <label><b>Name</b></label>
         <input class="w3-input w3-border w3-margin-bottom" type="text" name="Name" required [(ngModel)]="newContact.Info.Name">
-        <button class="w3-button w3-block w3-left-align w3-gray" (click)="ShowPhone = !ShowPhone;"><b>Phone</b></button>
-        <div class="w3-section" *ngIf="ShowPhone">
+        <button class="w3-button w3-block w3-left-align w3-gray" (click)="showPhone = !showPhone;"><b>Phone</b></button>
+        <div class="w3-section" *ngIf="showPhone">
           <label><b>Number</b></label>
           <input class="w3-input w3-border" type="text" name="PhoneNumber" required [(ngModel)]="newContact.Info.DefaultPhone.Number">
           <label><b>Description</b></label>
@@ -45,8 +45,8 @@
           <label><b>Country code</b></label>
           <input class="w3-input w3-border" type="text" name="Country Code" required [(ngModel)]="newContact.Info.DefaultPhone.CountryCode">
         </div>
-        <button class="w3-button w3-block w3-left-align w3-gray" (click)="ShowEmail = !ShowEmail;"><b>Email</b></button>
-        <div class="w3-section" *ngIf="ShowEmail">
+        <button class="w3-button w3-block w3-left-align w3-gray" (click)="showEmail = !showEmail;"><b>Email</b></button>
+        <div class="w3-section" *ngIf="showEmail">
           <label><b>Email address</b></label>
           <input class="w3-input w3-border" type="text" name="Email Address" required [(ngModel)]="newContact.Info.DefaultEmail.EmailAddress">
           <label><b>Type</b></label>
@@ -54,8 +54,8 @@
           <label><b>Description</b></label>
           <input class="w3-input w3-border" type="text" name="Description" required [(ngModel)]="newContact.Info.DefaultEmail.Description">
         </div>
-        <button class="w3-button w3-block w3-left-align w3-gray" (click)="ShowAddress = !ShowAddress;"><b>Address</b></button>
-        <div class="w3-section" *ngIf="ShowAddress">
+        <button class="w3-button w3-block w3-left-align w3-gray" (click)="showAddress = !showAddress;"><b>Address</b></button>
+        <div class="w3-section" *ngIf="showAddress">
           <label><b>Addressline 1</b></label>
           <input class="w3-input w3-border" type="text" name="Adressline 1" required [(ngModel)]="newContact.Info.InvoiceAddress.AddressLine1">
           <label><b>Addressline 2</b></label>
@@ -79,7 +79,7 @@
     </form>
 
     <div class="w3-container w3-border-top w3-padding-16 w3-light-grey">
-      <button (click)="ToggleModal()" type="button" class="w3-button w3-red">Cancel</button>
+      <button (click)="ToggleModal();" type="button" class="w3-button w3-red">Cancel</button>
       <button (click)="addOrUpdate()" class="w3-button w3-green" style="float: right" type="submit">Save</button>
     </div>
 
